# flight_service

./: CLAUDE.md  aeronefs.yaml  aircraft.txt  index.html  package.json
.claude/: settings.local.json
src/: App.css  App.tsx
src-tauri/: .env.example  .gitignore  Cargo.toml  IMPORT_AIRPORTS.md  README.md  build.rs  flight_service.db  flight_service.db-journal  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_seed_data.sql  003_aircraft_specs.sql  004_owned_aircraft_instances.sql  005_fix_active_missions_fk.sql
src-tauri/src/: aircraft.yaml  airspace.rs  commands.rs  db.rs  elevation.rs  lib.rs  main.rs  models.rs  simconnect_service.rs
src-tauri/src/db/: queries.rs
src-tauri/src/db/queries/: active_missions.rs  aircraft.rs  airports.rs  cheats.rs  geo.rs  maintenance.rs  market.rs  missions.rs  navaids.rs  player.rs
src-tauri/src/models/: active_mission.rs  aircraft.rs  airport.rs  maintenance.rs  market_aircraft.rs  mission.rs  navaid.rs  owned_aircraft.rs  player.rs  player_aircraft.rs
src/components/: AircraftCard.css  AircraftCard.tsx  ElevationProfile.css  ElevationProfile.tsx  Header.css  Header.tsx  MissionCard.css  MissionCard.tsx  Popup.css  Popup.tsx
src/context/: PlayerContext.tsx  PopupContext.tsx  SimConnectContext.tsx
src/pages/: ActiveMissions.css  ActiveMissions.tsx  AircraftCatalog.css  AircraftCatalog.tsx  Airports.css  Airports.tsx  Cheat.css  Cheat.tsx  Dashboard.css  Dashboard.tsx  Data.css  Data.tsx  Hangar.css  Hangar.tsx  Map.css  Map.tsx  MissionList.css  MissionList.tsx  Setup.css  Setup.tsx  Shop.css  Shop.tsx
(+18 files in other folders)
